# biocite-mcp

./: .gitignore  README.md  pyproject.toml
src/biocite_mcp/: __init__.py  __main__.py  server.py
src/biocite_mcp/tools/: __init__.py  audit.py  deduplicate.py  export.py  resolve.py  search.py  summary.py  zotero.py
src/biocite_mcp/utils/: __init__.py  formatting.py  metadata.py
